# ChangeLog for sys-fs/xfsdump
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsdump/ChangeLog,v 1.60 2007/11/02 04:17:16 beandog Exp $

  02 Nov 2007; Steve Dibb <beandog@gentoo.org> xfsdump-2.2.46.ebuild:
  amd64 stable, bug 197204

  31 Oct 2007; Jeroen Roovers <jer@gentoo.org> xfsdump-2.2.46.ebuild:
  Stable for HPPA (bug #197204).

  30 Oct 2007; nixnut <nixnut@gentoo.org> xfsdump-2.2.46.ebuild:
  Stable on ppc wrt bug 197204

  29 Oct 2007; Raúl Porcel <armin76@gentoo.org> xfsdump-2.2.46.ebuild:
  alpha/ia64/x86 stable wrt #197204

  28 Oct 2007; Markus Rothe <corsair@gentoo.org> xfsdump-2.2.46.ebuild:
  Stable on ppc64; bug #197204

*xfsdump-2.2.46 (20 Sep 2007)

  20 Sep 2007; Mike Frysinger <vapier@gentoo.org> +xfsdump-2.2.46.ebuild:
  Version bump #192647 by Arfrever Frehtes Taifersar Arahesis.

  25 Aug 2007; Mike Frysinger <vapier@gentoo.org> xfsdump-2.2.45.ebuild:
  Pull in gettext at build time #161179.

  16 Jun 2007; Christoph Mende <angelos@gentoo.org> xfsdump-2.2.45.ebuild:
  Stable on amd64 wrt security bug 180367

  13 Jun 2007; Mike Frysinger <vapier@gentoo.org>
  +files/xfsdump-2.2.45-LDFLAGS.patch, xfsdump-2.2.45.ebuild:
  Respect LDFLAGS while linking the library.

  03 Jun 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfsdump-2.2.45.ebuild:
  ppc stable, bug #180367

  02 Jun 2007; Markus Rothe <corsair@gentoo.org> xfsdump-2.2.45.ebuild:
  Stable on ppc64; bug #180367

  01 Jun 2007; Jeroen Roovers <jer@gentoo.org> xfsdump-2.2.45.ebuild:
  Stable for HPPA (bug #180367).

  31 May 2007; Raúl Porcel <armin76@gentoo.org> xfsdump-2.2.45.ebuild:
  alpha/ia64/x86 stable wrt security #180367

*xfsdump-2.2.45 (31 May 2007)

  31 May 2007; Mike Frysinger <vapier@gentoo.org> +xfsdump-2.2.45.ebuild:
  Version bump #180367.

  07 Jan 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  xfsdump-2.2.42.ebuild:
  ppc stable, bug #159469
