@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/xfsprogs
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsprogs/ChangeLog,v 1.84 2007/11/02 04:14:15 beandog Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-fs/xfsprogs/ChangeLog,v 1.85 2007/11/19 06:40:45 kumba Exp $
+
+  19 Nov 2007; Joshua Kinard <kumba@gentoo.org> xfsprogs-2.9.4.ebuild:
+  Stable on mips, per #197204.
 
   02 Nov 2007; Steve Dibb <beandog@gentoo.org> xfsprogs-2.9.4.ebuild:
   amd64 stable, bug 197204
